--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.security.debug=false
-jwt.secret=my_super_secret_key_123456890_abcdef_123456
+jwt.secret=my_super_secret_key1_123456890_abcdef_123456
 jwt.expiration=3600000
+
+frontend.url=${FRONTEND_URL}
